<resources>
    <string name="app_name">REACH</string>
    <string name="login">INICIAR SESION</string>
    <string name="signup">CREAR CUENTA</string>
    <string name="email">Correo</string>
    <string name="forgetpassword">Olvide mi contraseña</string>
    <string name="text_signup">Soy nuevo aqui, Crear cuenta</string>
    <string name="password">Contraseña</string>
    <string name="text_onboarding_screen_3">¡También las podes calificar!</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_search">Search</string>
    <string name="title_menu_favorites">Favorites</string>
    <string name="title_menu_profile">Profile</string>
    <string name="text_onboarding_screen_2">¡Guarda las que más te gusten en favoritos!</string>

    <string name="text_button_skip">Omitir</string>
    <string name="text_onboarding_screen_1">Las mejores series y películas en un solo lugar</string>
    <string name="text_button_next">Next</string>
    <string name="text_button1_home">Peliculas</string>
    <string name="text_button2_home">Series</string>
    <string name="text_name_login">Nombre</string>
    <string name="text_lastname_login">Apellido</string>
    <string name="text_or_login">O registrarme con:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_forgetpass_dialog">Ingrese Email para recuperar su contraseña</string>
    <string name="text_send_dialog">Enviar</string>
    <string name="text_cancel_dialog">Cancelar</string>
    <string name="signout">Desconectarse</string>
    <string name="header_details_cast_section">Reparto</string>
    <string name="header_details_duration_section">Duración</string>
    <string name="text_favorite_title">Estas son tus elegidos:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_spanish_setting">Español</string>
    <string name="text_setting_ingles">Ingles</string>
</resources>