<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_onboarding.screen.ThirdScreen">

    <ImageView
        android:id="@+id/imageViewScreen3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/casadepapel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2Screen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_onboarding_screen_3"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/buttonLogin"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/bottom_login"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/textView2Screen3"
        app:layout_constraintStart_toStartOf="@+id/textView2Screen3"
        app:layout_constraintTop_toBottomOf="@+id/textView2Screen3" />

    <Button
        android:id="@+id/buttonSignup"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/bottom_login"
        android:text="@string/signup"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideline90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>